...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsPage">

    <!--    <com.google.android.material.textfield.TextInputEditText-->
<!--        android:id="@+id/usernameInput"-->
<!--        android:layout_width="324dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="68dp"-->
<!--        android:layout_marginTop="252dp"-->
<!--        android:hint="username"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="192dp"
        android:background="@color/teal_700"
        android:text="Save"
...
